--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>ImageChef</title>
-    <!--<link rel="shortcut icon" href="assets/icon.jpg" type="image/x-icon">-->
+    <!--<link rel="shortcut icon" href="assets/icon.jpg" type="image/x-icon">--->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
