Update xample URLS

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 <body>
     <div class="banner">
         <div class="banner-content">
-            <!--<a href="https://example.com">ImageChef</a>-->
-            <div class="banner-title"><a>ImageChef</a></div>
+            <div class="banner-title"><a href="https://github.com/RagingGam0r/ImageChef-testing">ImageChef</a></div>
             <div class="banner-settings"><a id="settings-abutton">Settings<span class="material-symbols-outlined">settings</span></a></div>
             <div class="banner-preloaded"><a id="preloaded-abutton">Preloaded<span class="material-symbols-outlined">folder</span></a></div>
             <div class="banner-section"><input type="submit" id="bake-button" value="Bake"></div>
